2018-11-13	"Do you have lysdexia?"  (5)

		infra/travis-install-deps.sh :
		- updated full path to dosemu2 VM programs, sort of

		lolwutconf/ :
		- bumped to e74b3182d9

2018-11-12	"Do you have lysdexia?"  (4)

		infra/travis-install-deps.sh :
		- now always does an `sudo apt-get update -y' to properly
		  prime the APT database

		lolwutconf/ :
		- bumped to 47bb66cddb

2018-11-11	"Do you have lysdexia?"  (3)

		GNUmakefile ,
		bin/innocent-pear-front-end.tcc ,
		share/innocent-pear/calm.cc :
		- now adds prefix tags (e.g. ia16-elf-innocent-pear-cc) to
		  names of target-dependent programs for cross builds

		lolwutconf/ :
		- bumped to fbde447de2

2018-06-09	"Do you have lysdexia?"  (2)

		lolwutconf/ :
		- bumped to 18e0a71a1c

2018-06-07	"Do you have lysdexia?"

		.travis.yml :
		- re-enabling ia16-elf builds

2018-04-06	"A businessman is a hybrid of a dancer and a calculator."  (2)

		infra/travis-install-deps.sh :
		- updated commands for tweaking FreeDOS setup for dosemu2

		.travis.yml :
		- disabling ia16-elf builds for the time being

2018-03-05	"A businessman is a hybrid of a dancer and a calculator."

		README.md :
		- updated ia16-elf-g++ URL...

2018-03-04	"Ah say, son, you're about as sharp as a bowlin' ball."

		GNUmakefile ,
		configure :
		- test for target-side `-fno-toplevel-reorder' support

		bin/innocent-pear-front-end.tcc :
		- better error reporting for case where `-wrapper' is not
		  supported (i.e. when using clang)
		- test for target-side `-fno-toplevel-reorder' support

		lolwutconf/ :
		- bumped to e264aa85e4

2018-03-03	ia16-elf-gcc updates. :-)

		infra/travis-build-and-check.sh ,
		infra/travis-install-deps.sh :
		- now uses Ubuntu PPAs for getting binaries for gcc-ia16-elf
		  and dosemu2

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/omg.h :
		- "%a3" (e.g.) within __asm causes an `%ss:' override to pop
		  up, so use "%c3" instead

		infra/dosemu-freedos-1.0-bin.tgz :
		- added